build the column component

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     />
   </head>
   <body>
-    <article class="card">
-      <img src="images/icon-luxury.svg" alt="" />
+    <article class="card card--orange">
+      <img src="images/icon-sedans.svg" alt="" />
       <h1>SEDANS</h1>
       <p>
         Choose a sedan for its affordability and excellent fuel economy. Ideal
         for cruising in the city or on your next road trip.
       </p>
-      <button class="btn">Learn more</button>
+      <button class="btn btn--orange">Learn More</button>
     </article>
   </body>
 </html>
