--- a/index.html
+++ b/index.html
@@ -18,14 +18,36 @@
     />
   </head>
   <body>
-    <article class="card card--orange">
-      <img src="images/icon-sedans.svg" alt="" />
-      <h1>SEDANS</h1>
-      <p>
-        Choose a sedan for its affordability and excellent fuel economy. Ideal
-        for cruising in the city or on your next road trip.
-      </p>
-      <button class="btn btn--orange">Learn More</button>
-    </article>
+    <main>
+      <div class="grid grid-1x3">
+        <article class="card card--orange">
+          <img src="images/icon-sedans.svg" alt="" />
+          <h1>SEDANS</h1>
+          <p>
+            Choose a sedan for its affordability and excellent fuel economy.
+            Ideal for cruising in the city or on your next road trip.
+          </p>
+          <button class="btn btn--orange">Learn More</button>
+        </article>
+        <article class="card card--darkcyan">
+          <img src="images/icon-suvs.svg" alt="" />
+          <h1>SEDANS</h1>
+          <p>
+            Take an SUV for its spacious interior, power, and versatility.
+            Perfect for your next family vacation and off-road adventures.
+          </p>
+          <button class="btn btn--darkcyan">Learn More</button>
+        </article>
+        <article class="card card--veryDarkcyan">
+          <img src="images/icon-luxury.svg" alt="" />
+          <h1>SEDANS</h1>
+          <p>
+            Cruise in the best car brands without the bloated prices. Enjoy the
+            enhanced comfort of a luxury rental and arrive in style.
+          </p>
+          <button class="btn btn--veryDarkcyan">Learn More</button>
+        </article>
+      </div>
+    </main>
   </body>
 </html>
